@@ -52,7 +52,7 @@ blockface_correct_perspective.m
 	
 blockface_create_masks.m
 
-	 BLOCKFACE_CREATE_MASK  User interface to create the elliptical and
+	 blockface_create_masks  User interface to create the elliptical and
 	 polygonal segmentation masks used to correct blockface illumination.
 	
 blockface_equalise_illumination.m
